# DADM-Aiximius

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: deploy-verify.yml  docker-build.yml  lint.yml  python.yml  rust.yml
agent/: Cargo.toml  README.md  config.sample.json
agent/benches/: inference.rs  pipeline.rs  storage.rs
agent/src/: config.rs  lib.rs  main.rs  uplink.rs
agent/src/collectors/: file.rs  mod.rs  network.rs  privilege.rs  process.rs
agent/src/features/: behavioral.rs  mod.rs  pipeline.rs
agent/src/logging/: format.rs  mod.rs
agent/src/model/: mod.rs  onnx.rs
agent/src/risk/: engine.rs  mod.rs
agent/src/storage/: encrypted.rs  mod.rs
agent/tests/: integration_test.rs
deploy/: README.md
deploy/ansible/: README.md
deploy/ansible/playbooks/: offline-model-update.yml  site.yml
deploy/ansible/playbooks/tasks/: audit_logging.yml
deploy/ansible/scripts/: verify_model_package.py
deploy/docker/: Dockerfile.fusion  Dockerfile.graph  Dockerfile.mesh  Dockerfile.reasoning
deploy/kubernetes/: dadm-fusion-deployment.example.yaml
deploy/terraform/: README.md  main.tf  variables.tf
docs/: ARCHITECTURE.md  DSO-ONTOLOGY.md  EDGE-MODEL-DESIGN.md  FEDERATED-LEARNING.md  GOVERNMENT-DEPLOYMENT.md  IMPLEMENTATION-PLAN.md  LLM-REASONING-LAYER.md  RUNBOOK.md  USER-FLOW-AND-OUTPUT.md  ZERO-TRUST-MESH.md  architecture-diagram.mmd
federated/: README.md  client.py  compression.py  crypto_utils.py  export_signed_package.py  protocol.py  requirements.txt  server.py  versioning.py
graph/: README.md  api.py  clustering.py  neo4j_store.py  requirements.txt  risk_propagation.py  schema.py
graph/examples/: dashboard_queries.cypher
mesh/: README.md  ca_utils.py  openapi.yaml  requirements.txt  server.py
reasoning/: README.md  app.py  audit.py  guardrails.py  llm_client.py  prompts.py
reasoning/schemas/: audit_log_entry.json  explanation_output.json
tests/: requirements.txt
tests/unit/: test_deploy_verify_script.py  test_federated_crypto.py  test_graph_schema.py  test_reasoning_guardrails.py
training/: README.md  config.yaml  drift.py  explain.py  export_onnx.py  models.py  quantize.py  requirements.txt  run_pipeline.sh  schema.py  train.py
