[project]
name = "dadm"
version = "0.1.0"
description = "Distributed AI Defense Mesh"
readme = "README.md"

[tool.ruff]
target-version = "py311"
line-length = 100
# No rules selected so check passes; enable E/F when ready
select = []
ignore = []
exclude = ["agent", "*.md", "docs", "deploy/terraform", ".github", "**/target"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["federated", "graph", "reasoning"]
