[package]
name = "dadm-agent"
version = "0.1.0"
edition = "2021"
description = "DADM cross-platform defensive AI endpoint agent"
authors = ["Aiximius"]
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["fs", "io-util", "sync", "time", "rt-multi-thread"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ONNX inference
ort = { version = "1.16", default-features = false, features = ["load-dynamic"] }
ndarray = "0.15"

# Crypto & secure storage
ring = "0.17"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"

# Hashing
sha2 = "0.10"

# Database (local store)
rusqlite = { version = "0.31", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client for uplink
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
ctrlc = "3.4"

# Cross-platform process/network (best-effort)
sysinfo = "0.30"
dirs = "5.0"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Platform-specific (optional)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = ["Win32_System_Threading", "Win32_System_ProcessStatus", "Win32_System_SystemInformation"] }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.10"

[[bin]]
name = "dadm-agent"
path = "src/main.rs"

[lib]
name = "dadm_agent"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[[bench]]
name = "inference"
harness = false

[[bench]]
name = "pipeline"
harness = false

[[bench]]
name = "storage"
harness = false
